force-app/main/default/objects/Customer_Survey__c/Customer_Survey__c.object-meta.xml
<CustomObject>
    <label>Customer Survey</label>
    <nameField>
        <displayFormat>SV-{0000}</displayFormat>
        <label>Customer Survey Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Surveys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>