force-app/main/default/objects/Customer_Survey__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Customer Surveys</relationshipLabel>
    <relationshipName>Customer_Surveys</relationshipName>
    <type>Lookup</type>
</CustomField>