force-app/main/default/objects/Customer_Survey__c/fields/Account_District__c.field-meta.xml
<CustomField>
    <fullName>Account_District__c</fullName>
    <label>Account District</label>
    <length>50</length>
    <type>Text</type>
</CustomField>