force-app/main/default/objects/Customer_Survey__c/fields/Account_Market__c.field-meta.xml
<CustomField>
    <fullName>Account_Market__c</fullName>
    <formula>IF(Account_Market_Non_Translated__c = &apos;T&apos;, &apos;T&amp;L&apos;, Account_Market_Non_Translated__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Market</label>
    <type>Text</type>
</CustomField>