force-app/main/default/objects/Customer_Survey__c/fields/Account_Market_Non_Translated__c.field-meta.xml
<CustomField>
    <fullName>Account_Market_Non_Translated__c</fullName>
    <label>Account Market Non Translated</label>
    <length>50</length>
    <type>Text</type>
</CustomField>