force-app/main/default/objects/Customer_Survey__c/fields/AR_Representative__c.field-meta.xml
<CustomField>
    <fullName>AR_Representative__c</fullName>
    <formula>Account__r.AR_Representative__r.FirstName &amp; &apos; &apos; &amp; Account__r.AR_Representative__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AR Representative</label>
    <type>Text</type>
</CustomField>