force-app/main/default/objects/Customer_Survey__c/fields/Case_Number__c.field-meta.xml
<CustomField>
    <fullName>Case_Number__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case Number</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Customer Surveys</relationshipLabel>
    <relationshipName>Case_Number</relationshipName>
    <type>Lookup</type>
</CustomField>