force-app/main/default/objects/Customer_Survey__c/fields/Customer_Success_Manager__c.field-meta.xml
<CustomField>
    <fullName>Customer_Success_Manager__c</fullName>
    <formula>Account__r.CSR__r.FirstName &amp; &apos; &apos; &amp; Account__r.CSR__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Success Manager</label>
    <type>Text</type>
</CustomField>