force-app/main/default/objects/Customer_Survey__c/fields/Customer_Survey_ID__c.field-meta.xml
<CustomField>
    <fullName>Customer_Survey_ID__c</fullName>
    <label>Customer Survey ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>