force-app/main/default/objects/Customer_Survey__c/fields/Date_Time_Last_Pre_NPS_Notification__c.field-meta.xml
<CustomField>
    <fullName>Date_Time_Last_Pre_NPS_Notification__c</fullName>
    <label>Date/Time Last Pre-NPS Notification</label>
    <type>DateTime</type>
</CustomField>