force-app/main/default/objects/Customer_Survey__c/fields/Email_Opened__c.field-meta.xml
<CustomField>
    <fullName>Email_Opened__c</fullName>
    <label>Email Opened</label>
    <length>15</length>
    <type>Text</type>
</CustomField>