force-app/main/default/objects/Customer_Survey__c/fields/Main_Survey__c.field-meta.xml
<CustomField>
    <fullName>Main_Survey__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Main Survey</label>
    <type>Checkbox</type>
</CustomField>