force-app/main/default/objects/Customer_Survey__c/fields/Market__c.field-meta.xml
<CustomField>
    <fullName>Market__c</fullName>
    <formula>TEXT(Account__r.QWBS_Market__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Market</label>
    <type>Text</type>
</CustomField>