force-app/main/default/objects/Customer_Survey__c/fields/NPSAccount__c.field-meta.xml
<CustomField>
    <fullName>NPSAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>NPSAccount</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>NPS Surveys</relationshipLabel>
    <relationshipName>NPS_Surveys</relationshipName>
    <type>Lookup</type>
</CustomField>