force-app/main/default/objects/Customer_Survey__c/fields/Omni_Survey_Tracking__c.field-meta.xml
<CustomField>
    <fullName>Omni_Survey_Tracking__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Omni Survey Tracking</label>
    <referenceTo>Omni_Survey_Tracking__c</referenceTo>
    <relationshipLabel>Customer Surveys</relationshipLabel>
    <relationshipName>Customer_Surveys</relationshipName>
    <type>Lookup</type>
</CustomField>