force-app/main/default/objects/Customer_Survey__c/fields/Pre_NPS_Notification_Sent__c.field-meta.xml
<CustomField>
    <fullName>Pre_NPS_Notification_Sent__c</fullName>
    <description>Sync field to enable the automation of pre-NPS notifications from Clicktools</description>
    <label>Pre-NPS Notification Sent</label>
    <length>20</length>
    <type>Text</type>
</CustomField>