force-app/main/default/objects/Customer_Survey__c/fields/Project_Manager__c.field-meta.xml
<CustomField>
    <fullName>Project_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project Manager</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Customer Surveys (Project Manager)</relationshipLabel>
    <relationshipName>Customer_Surveys</relationshipName>
    <type>Lookup</type>
</CustomField>