force-app/main/default/objects/Customer_Survey__c/fields/Question_10__c.field-meta.xml
<CustomField>
    <fullName>Question_10__c</fullName>
    <label>Question 10</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>