force-app/main/default/objects/Customer_Survey__c/fields/Recipient_Contact__c.field-meta.xml
<CustomField>
    <fullName>Recipient_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Recipient Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Customer Surveys</relationshipLabel>
    <relationshipName>Recipient_Contact</relationshipName>
    <type>Lookup</type>
</CustomField>