force-app/main/default/objects/Customer_Survey__c/fields/Recipient_Contact_Organization__c.field-meta.xml
<CustomField>
    <fullName>Recipient_Contact_Organization__c</fullName>
    <label>Recipient Contact Organization</label>
    <length>100</length>
    <type>Text</type>
</CustomField>