force-app/main/default/objects/Customer_Survey__c/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <formula>TEXT(Account__r.Region__c)</formula>
    <label>Region</label>
    <type>Text</type>
</CustomField>