force-app/main/default/objects/Customer_Survey__c/fields/Response_10__c.field-meta.xml
<CustomField>
    <fullName>Response_10__c</fullName>
    <label>Response 10</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>