force-app/main/default/objects/Customer_Survey__c/fields/Response_11__c.field-meta.xml
<CustomField>
    <fullName>Response_11__c</fullName>
    <label>Response 11</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>