force-app/main/default/objects/Customer_Survey__c/fields/Response_12__c.field-meta.xml
<CustomField>
    <fullName>Response_12__c</fullName>
    <label>Response 12</label>
    <type>TextArea</type>
</CustomField>