force-app/main/default/objects/Customer_Survey__c/fields/Response_3_Value__c.field-meta.xml
<CustomField>
    <fullName>Response_3_Value__c</fullName>
    <formula>IF( CONTAINS(Response_3__c, &quot;5&quot;),
5, IF( CONTAINS(Response_3__c, &quot;4&quot;),
4, IF( CONTAINS(Response_3__c, &quot;3&quot;),
3, IF( CONTAINS(Response_3__c, &quot;2&quot;),
2, IF( CONTAINS(Response_3__c, &quot;1&quot;),
1, null)))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Response 3 Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>