force-app/main/default/objects/Customer_Survey__c/fields/Response_Value_Average__c.field-meta.xml
<CustomField>
    <fullName>Response_Value_Average__c</fullName>
    <label>Response Value Average</label>
    <precision>3</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>