force-app/main/default/objects/Customer_Survey__c/fields/Sales_Director__c.field-meta.xml
<CustomField>
    <fullName>Sales_Director__c</fullName>
    <formula>Account__r.User_Sales_Director__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Director</label>
    <type>Text</type>
</CustomField>