force-app/main/default/objects/Customer_Survey__c/fields/Survey_Initiated__c.field-meta.xml
<CustomField>
    <fullName>Survey_Initiated__c</fullName>
    <defaultValue>&quot;Initiated&quot;</defaultValue>
    <label>Survey Initiated</label>
    <length>15</length>
    <type>Text</type>
</CustomField>