force-app/main/default/objects/Customer_Survey__c/fields/Survey_Takers_Name__c.field-meta.xml
<CustomField>
    <fullName>Survey_Takers_Name__c</fullName>
    <label>Survey Recipient Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>