force-app/main/default/objects/Customer_Survey__c/fields/Survey_Type__c.field-meta.xml
<CustomField>
    <fullName>Survey_Type__c</fullName>
    <label>Survey Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CERSurvey</fullName>
            </value>
            <value>
                <fullName>PSEProjectSurvey</fullName>
            </value>
            <value>
                <fullName>ODOnsiteTraining</fullName>
            </value>
            <value>
                <fullName>ODTrainingWebinar</fullName>
            </value>
            <value>
                <fullName>ODPSProjectClosure</fullName>
            </value>
            <value>
                <fullName>NPS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>