force-app/main/default/objects/Customer_Survey__c/fields/Weighted_Average__c.field-meta.xml
<CustomField>
    <fullName>Weighted_Average__c</fullName>
    <label>Weighted Average</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>