force-app/main/default/objects/Customer_Survey__c/fields/Would_like_to_be_contacted__c.field-meta.xml
<CustomField>
    <fullName>Would_like_to_be_contacted__c</fullName>
    <label>Would like to be contacted</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>