force-app/main/default/objects/Customer_Survey__c/recordTypes/CSM_Survey.recordType-meta.xml
<RecordType>
    <fullName>CSM_Survey</fullName>
    <active>true</active>
    <label>CSM Survey</label>
</RecordType>