force-app/main/default/objects/Customer_Survey__c/listViews/NPS_Surveys.listView-meta.xml
<ListView>
    <fullName>NPS_Surveys</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Recipient_Contact__c</columns>
    <columns>Response_1__c</columns>
    <columns>Completion_Date_Time__c</columns>
    <columns>NPS_Wave__c</columns>
    <columns>Market__c</columns>
    <columns>Region__c</columns>
    <columns>Segment__c</columns>
    <columns>Territory__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Survey_Type__c</field>
        <operation>equals</operation>
        <value>NPS</value>
    </filters>
    <label>NPS Surveys</label>
    <language>en_US</language>
    <sharedTo>
        <group>NPS_Team</group>
        <group>SystemAdministrator</group>
    </sharedTo>
</ListView>